<resources>
    <string name="app_name">MeetUpUdeA</string>
    <string name="app_name2">Meet Up UdeA</string>
    <string name="btnSignOut">Salir</string>
    <string name="button_Create">Crear</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    // Create group
    <string name="hint_createGroup_title">Nombre</string>
    <string name="hint_createGroup_description">¿Quien debería unirse y que harán juntos?</string>
    <string name="button_CreateGroup">+ Grupo</string>
    <string name="title_activity_create_group_elements">CreateGroupElementsActivity</string>


    // Create course
    <string name="hint_createCourse_title">Nombre</string>
    <string name="hint_createCourse_place">Lugar</string>
    <string name="hint_createCourse_schedule">Horario  Ej: Lunes a viernes 6-8 am</string>
    <string name="hint_createCourse_description">De que trata el curso?</string>

    // View Profile
    <string name="Creados">Revisa tus grupos!</string>

    //Fragment meetup
    <string name="text_message_meetup">Aún no sigues a ningún grupo</string>

    //Toolbar
    <string name="DeleteGroup">Eliminar</string>
    <string name="EditGroup">Editar</string>
    <string name="SettingsGroup">Configuraciones</string>


</resources>
